v16.2/classes/GC.Spread.Sheets.Slicers.Slicer.md
# Class: Slicer

[Sheets](../modules/GC.Spread.Sheets.md).[Slicers](../modules/GC.Spread.Sheets.Slicers.md).Slicer

## Table of contents

### Constructors

- [constructor](GC.Spread.Sheets.Slicers.Slicer.md#constructor)

### Methods

- [allowMove](GC.Spread.Sheets.Slicers.Slicer.md#allowmove)
- [allowResize](GC.Spread.Sheets.Slicers.Slicer.md#allowresize)
- [captionName](GC.Spread.Sheets.Slicers.Slicer.md#captionname)
- [columnCount](GC.Spread.Sheets.Slicers.Slicer.md#columncount)
- [columnName](GC.Spread.Sheets.Slicers.Slicer.md#columnname)
- [disableResizingAndMoving](GC.Spread.Sheets.Slicers.Slicer.md#disableresizingandmoving)
- [dynamicMove](GC.Spread.Sheets.Slicers.Slicer.md#dynamicmove)
- [dynamicSize](GC.Spread.Sheets.Slicers.Slicer.md#dynamicsize)
- [endColumn](GC.Spread.Sheets.Slicers.Slicer.md#endcolumn)
- [endColumnOffset](GC.Spread.Sheets.Slicers.Slicer.md#endcolumnoffset)
- [endRow](GC.Spread.Sheets.Slicers.Slicer.md#endrow)
- [endRowOffset](GC.Spread.Sheets.Slicers.Slicer.md#endrowoffset)
- [height](GC.Spread.Sheets.Slicers.Slicer.md#height)
- [isLocked](GC.Spread.Sheets.Slicers.Slicer.md#islocked)
- [isSelected](GC.Spread.Sheets.Slicers.Slicer.md#isselected)
- [isVisible](GC.Spread.Sheets.Slicers.Slicer.md#isvisible)
- [itemHeight](GC.Spread.Sheets.Slicers.Slicer.md#itemheight)
- [multiSelect](GC.Spread.Sheets.Slicers.Slicer.md#multiselect)
- [name](GC.Spread.Sheets.Slicers.Slicer.md#name)
- [nameInFormula](GC.Spread.Sheets.Slicers.Slicer.md#nameinformula)
- [position](GC.Spread.Sheets.Slicers.Slicer.md#position)
- [refresh](GC.Spread.Sheets.Slicers.Slicer.md#refresh)
- [sheet](GC.Spread.Sheets.Slicers.Slicer.md#sheet)
- [showHeader](GC.Spread.Sheets.Slicers.Slicer.md#showheader)
- [showNoDataItems](GC.Spread.Sheets.Slicers.Slicer.md#shownodataitems)
- [showNoDataItemsInLast](GC.Spread.Sheets.Slicers.Slicer.md#shownodataitemsinlast)
- [sortState](GC.Spread.Sheets.Slicers.Slicer.md#sortstate)
- [sourceName](GC.Spread.Sheets.Slicers.Slicer.md#sourcename)
- [startColumn](GC.Spread.Sheets.Slicers.Slicer.md#startcolumn)
- [startColumnOffset](GC.Spread.Sheets.Slicers.Slicer.md#startcolumnoffset)
- [startRow](GC.Spread.Sheets.Slicers.Slicer.md#startrow)
- [startRowOffset](GC.Spread.Sheets.Slicers.Slicer.md#startrowoffset)
- [style](GC.Spread.Sheets.Slicers.Slicer.md#style)
- [visuallyNoDataItems](GC.Spread.Sheets.Slicers.Slicer.md#visuallynodataitems)
- [width](GC.Spread.Sheets.Slicers.Slicer.md#width)
- [x](GC.Spread.Sheets.Slicers.Slicer.md#x)
- [y](GC.Spread.Sheets.Slicers.Slicer.md#y)

## Constructors

### <a id="constructor" name="constructor"></a> constructor

• **new Slicer**()

Represents a table item slicer.

## Methods

### <a id="allowmove" name="allowmove"></a> allowMove

▸ **allowMove**(`value?`): `any`

获取或设置切片器的allowMove

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `boolean` |

#### Returns

`any`

如果没有设置值,返回切片器的allowMove;否则,返回切片器

___

### <a id="allowresize" name="allowresize"></a> allowResize

▸ **allowResize**(`value?`): `any`

获取或设置切片器的allowResize

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `boolean` |

#### Returns

`any`

如果没有设置值,返回切片器的allowResize;否则,返回切片器

___

### <a id="captionname" name="captionname"></a> captionName

▸ **captionName**(`value?`): `any`

获取或设置切片器的captionName

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `string` |

#### Returns

`any`

如果没有设置值,返回切片器的captionName;否则,返回切片器

___

### <a id="columncount" name="columncount"></a> columnCount

▸ **columnCount**(`value?`): `any`

获取或设置切片器的columnCount

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |

#### Returns

`any`

如果没有设置值,返回切片器的columnCount;否则,返回切片器

___

### <a id="columnname" name="columnname"></a> columnName

▸ **columnName**(): `string`

Get the columnName of the slicer.

#### Returns

`string`

returns the columnName of the slicer.

___

### <a id="disableresizingandmoving" name="disableresizingandmoving"></a> disableResizingAndMoving

▸ **disableResizingAndMoving**(`value?`): `any`

获取或设置切片器的disableResizingAndMoving

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `boolean` |

#### Returns

`any`

如果没有设置值,返回切片器的disableResizingAndMoving;否则,返回切片器

___

### <a id="dynamicmove" name="dynamicmove"></a> dynamicMove

▸ **dynamicMove**(`value?`): `any`

获取或设置切片器的dynamicMove

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `boolean` |

#### Returns

`any`

如果没有设置值,返回切片器的dynamicMove;否则,返回切片器

___

### <a id="dynamicsize" name="dynamicsize"></a> dynamicSize

▸ **dynamicSize**(`value?`): `any`

获取或设置切片器的dynamicSize

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `boolean` |

#### Returns

`any`

如果没有设置值,返回切片器的dynamicSize;否则,返回切片器

___

### <a id="endcolumn" name="endcolumn"></a> endColumn

▸ **endColumn**(`value?`): `any`

获取或设置切片器的endColumn

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |

#### Returns

`any`

如果没有设置值,返回切片器的endColumn;否则,返回切片器

___

### <a id="endcolumnoffset" name="endcolumnoffset"></a> endColumnOffset

▸ **endColumnOffset**(`value?`): `any`

获取或设置切片器的endColumnOffset

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |

#### Returns

`any`

如果没有设置值,返回切片器的endColumnOffset;否则,返回切片器

___

### <a id="endrow" name="endrow"></a> endRow

▸ **endRow**(`value?`): `any`

获取或设置切片器的endRow

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |

#### Returns

`any`

如果没有设置值,返回切片器的endRow;否则,返回切片器

___

### <a id="endrowoffset" name="endrowoffset"></a> endRowOffset

▸ **endRowOffset**(`value?`): `any`

获取或设置切片器的endRowOffset

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |

#### Returns

`any`

如果没有设置值,返回切片器的endRowOffset;否则,返回切片器

___

### <a id="height" name="height"></a> height

▸ **height**(`value?`): `any`

获取或设置切片器的高度

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |

#### Returns

`any`

如果没有设置值,返回切片器的高度;否则,返回切片器

___

### <a id="islocked" name="islocked"></a> isLocked

▸ **isLocked**(`value?`): `any`

获取或设置切片器的isLocked

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `boolean` |

#### Returns

`any`

如果没有设置值,返回切片器的isLocked;否则,返回切片器

___

### <a id="isselected" name="isselected"></a> isSelected

▸ **isSelected**(`value?`): `any`

获取或设置切片器的isSelected

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `boolean` |

#### Returns

`any`

如果没有设置值,返回切片器的isSelected;否则,返回切片器

___

### <a id="isvisible" name="isvisible"></a> isVisible

▸ **isVisible**(`value?`): `any`

获取或设置切片器的isVisible

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `boolean` |

#### Returns

`any`

如果没有设置值,返回切片器的isVisible;否则,返回切片器

___

### <a id="itemheight" name="itemheight"></a> itemHeight

▸ **itemHeight**(`value?`): `any`

获取或设置切片器的itemHeight

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |

#### Returns

`any`

如果没有设置值,返回切片器的itemHeight;否则,返回切片器

___

### <a id="multiselect" name="multiselect"></a> multiSelect

▸ **multiSelect**(`value?`): `any`

获取或设置切片器的multiSelect

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `boolean` |

#### Returns

`any`

如果没有设置值,返回切片器的multiSelect;否则,返回切片器

___

### <a id="name" name="name"></a> name

▸ **name**(`value?`): `any`

获取或设置切片器的name

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `string` |

#### Returns

`any`

如果没有设置值,返回切片器的名称;否则,返回切片器

___

### <a id="nameinformula" name="nameinformula"></a> nameInFormula

▸ **nameInFormula**(): `string`

切片器的nameInFormula

#### Returns

`string`

返回nameInFormula

___

### <a id="position" name="position"></a> position

▸ **position**(`value?`): `any`

获取或设置切片器的position

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`Point`](GC.Spread.Sheets.Point.md) |

#### Returns

`any`

如果没有设置值,返回切片器的position;否则,返回切片器

___

### <a id="refresh" name="refresh"></a> refresh

▸ **refresh**(): `void`

刷新切片器

#### Returns

`void`

___

### <a id="sheet" name="sheet"></a> sheet

▸ **sheet**(): [`Worksheet`](GC.Spread.Sheets.Worksheet.md)

获取表单

#### Returns

[`Worksheet`](GC.Spread.Sheets.Worksheet.md)

返回表单

___

### <a id="showheader" name="showheader"></a> showHeader

▸ **showHeader**(`value?`): `any`

获取或设置切片器的showHeader

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `boolean` |

#### Returns

`any`

如果没有设置值,返回切片器的showHeader;否则,返回切片器

___

### <a id="shownodataitems" name="shownodataitems"></a> showNoDataItems

▸ **showNoDataItems**(`value?`): `any`

获取或设置切片器的showNoDataItems

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `boolean` |

#### Returns

`any`

如果没有设置值,返回切片器的showNoDataItems;否则,返回切片器

___

### <a id="shownodataitemsinlast" name="shownodataitemsinlast"></a> showNoDataItemsInLast

▸ **showNoDataItemsInLast**(`value?`): `any`

获取或设置切片器的showNoDataItemsInLast

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `boolean` |

#### Returns

`any`

如果没有设置值,返回切片器的showNoDataItemsInLast;否则,返回切片器

___

### <a id="sortstate" name="sortstate"></a> sortState

▸ **sortState**(`value?`): `any`

获取或设置切片器的sortState

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`SortState`](../enums/GC.Spread.Sheets.SortState.md) |

#### Returns

`any`

如果没有设置值,返回切片器的sortState;否则,返回切片器

___

### <a id="sourcename" name="sourcename"></a> sourceName

▸ **sourceName**(): `string`

获取sourceName

#### Returns

`string`

返回sourceName

___

### <a id="startcolumn" name="startcolumn"></a> startColumn

▸ **startColumn**(`value?`): `any`

获取或设置切片器的startColumn

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |

#### Returns

`any`

如果没有设置值,返回切片器的startColumn;否则,返回切片器

___

### <a id="startcolumnoffset" name="startcolumnoffset"></a> startColumnOffset

▸ **startColumnOffset**(`value?`): `any`

获取或设置切片器的startColumnOffset

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |

#### Returns

`any`

如果没有设置值,返回切片器的startColumnOffset;否则,返回切片器

___

### <a id="startrow" name="startrow"></a> startRow

▸ **startRow**(`value?`): `any`

获取或设置切片器的startRow

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |

#### Returns

`any`

如果没有设置值,返回切片器的startRow;否则,返回切片器

___

### <a id="startrowoffset" name="startrowoffset"></a> startRowOffset

▸ **startRowOffset**(`value?`): `any`

获取或设置切片器的startRowOffset

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |

#### Returns

`any`

如果没有设置值,返回切片器的startRowOffset;否则,返回切片器

___

### <a id="style" name="style"></a> style

▸ **style**(`value?`): `any`

获取或设置切片器的style

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`SlicerStyle`](GC.Spread.Sheets.Slicers.SlicerStyle.md) |

#### Returns

`any`

如果没有设置值,返回切片器的style;否则,返回切片器

___

### <a id="visuallynodataitems" name="visuallynodataitems"></a> visuallyNoDataItems

▸ **visuallyNoDataItems**(`value?`): `any`

获取或设置切片器的visuallyNoDataItems

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `boolean` |

#### Returns

`any`

如果没有设置值,返回切片器的visuallyNoDataItems;否则,返回切片器

___

### <a id="width" name="width"></a> width

▸ **width**(`value?`): `any`

获取或设置切片器的width

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |

#### Returns

`any`

如果没有设置值,返回切片器的width;否则,返回切片器

___

### <a id="x" name="x"></a> x

▸ **x**(`value?`): `any`

获取或设置切片器的x

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |

#### Returns

`any`

如果没有设置值,返回切片器的x;否则,返回切片器

___

### <a id="y" name="y"></a> y

▸ **y**(`value?`): `any`

获取或设置切片器的y

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | `number` |

#### Returns

`any`

如果没有设置值,返回切片器的y;否则,返回切片器
